Commit continue "pattern_categories" table
